Refactoring of Val.Det. for LPI.
Provide a lemma that the bound must grow.

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@16841 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy-refinement.properties
+++ b/config/policy-refinement.properties
@@ -1,11 +1,14 @@
 #include policy.properties
 
 analysis.algorithm.CEGAR = true
-cegar.refiner = cpa.policyiteration.PolicyUnguidedRefiner
-cegar.globalRefinement=true
-
 specification = specification/sv-comp.spc
-cpa.stator.policy.generateOctagons=false
+
+[cegar]
+refiner = cpa.policyiteration.PolicyUnguidedRefiner
+globalRefinement=true
+
+[cpa.stator.policy]
+generateOctagons=false
 
 [cfa]
 findLiveVariables = true
