--- a/config/policyiteration/lpi-predicate-abstraction.properties
+++ b/config/policyiteration/lpi-predicate-abstraction.properties
@@ -8,7 +8,7 @@ cpa.predicate.interpolationSolver=SMTINTERPOL
 # Guessing predicates statically from the CFA is a heuristic that pays off.
 cpa.predicate.refinement.performInitialStaticRefinement = true
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.predicate.PredicateCPA, cpa.policyiteration.PolicyCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.loopstack.LoopstackCPA, cpa.predicate.PredicateCPA, cpa.policyiteration.PolicyCPA
 
 # analysis.checkCounterexamples = true
 # counterexample.checker = CPACHECKER
