Test commit on a branch: updated config.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@16885 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy.properties
+++ b/config/policy.properties
@@ -4,7 +4,7 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.fu
 
 specification = specification/default.spc
 
-cpa.loopstack.loopIterationsBeforeAbstraction = 1
+cpa.loopstack.loopIterationsBeforeAbstraction=1
 
 cpa.reportFalseAsUnknown=true
 
