Updated include path for config.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/lpi@16895 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/lpi-value-analysis.properties
+++ b/config/lpi-value-analysis.properties
@@ -1,4 +1,4 @@
-#include ../policy.properties
+#include policy.properties
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.loopstack.LoopstackCPA, cpa.value.ValueAnalysisCPA, cpa.policyiteration.PolicyCPA
 
