Update description of config files for symbolic execution.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/symbolic-cegar@17053 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/valueAnalysis-symbolic-refiner.properties
+++ b/config/valueAnalysis-symbolic-refiner.properties
@@ -1,6 +1,10 @@
 # ------------------------------------------------------------------
-# This configuration file uses explicit analysis of local integer
-# variables in a model-checking configuration.
+# This configuration file uses CEGAR with symbolic value analysis of
+# local integer variables and tracks constraints over them created
+# by assumptions. It refines both the precisions of the
+# ValueAnalysisCPA as well as the ConstraintsCPA.
+# Refinement is based on ValueAnalysisRefiner's refinement
+# for abstract variable assignments.
 # ------------------------------------------------------------------
 
 #include includes/valueAnalysis-symbolic.properties
