--- a/config/valueAnalysis-symbolic-refiner-pred.properties
+++ b/config/valueAnalysis-symbolic-refiner-pred.properties
@@ -1,6 +1,11 @@
 # ------------------------------------------------------------------
-# This configuration file uses explicit analysis of local integer
-# variables in a model-checking configuration.
+# This configuration file uses CEGAR with symbolic value analysis of
+# local integer variables and tracks constraints over them created
+# by assumptions. It refines both the precisions of the
+# ValueAnalysisCPA as well as the ConstraintsCPA.
+# PredicateCPA's refinement is used and precision is derived from
+# the predicates created by it. The precision of the PredicateCPA
+# is never refined.
 # ------------------------------------------------------------------
 
 #include includes/valueAnalysis-symbolic.properties
