--- a/config/policy-slicing.properties
+++ b/config/policy-slicing.properties
@@ -1,3 +1,12 @@
 #include policy-intervals.properties
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.loopstack.LoopstackCPA, cpa.formulaslicing.FormulaSlicingCPA, cpa.policyiteration.PolicyCPA
+
+
+analysis.traversal.useReverseLoopstack=true
+cpa.slicing.joinOnMerge=false
+
+[cpa.stator.policy]
+wideningThreshold = 0
+joinOnMerge=false
+runCongruence=false
