Updated LPI config.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@17724 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy.properties
+++ b/config/policy.properties
@@ -30,3 +30,6 @@ runCongruence = true
 order = bfs
 useCallstack = true
 useReversePostorder = true
+
+# Seems to make a (very marginal) difference.
+useReverseLoopstack = true
