Revert last commit, switch to FunctionPartitioning
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/DelegatingBAMRefinerLDV@17784 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/ldv-bam.properties
+++ b/config/ldv-bam.properties
@@ -10,6 +10,8 @@
 #include predicateAnalysis-bam.properties
 #include valueAnalysis-bam.properties
 
+cpa.bam.blockHeuristic = FunctionPartitioning
+
 cpa.predicate.blk.alwaysAtFunctions = true
 cpa.predicate.blk.alwaysAtLoops     = true
 
