--- a/config/ldv-components-valueAnalysis-itp.properties
+++ b/config/ldv-components-valueAnalysis-itp.properties
@@ -7,11 +7,11 @@
 # interpolation, to only track relevant variables.
 # ------------------------------------------------------------------
 
-#include ../valueAnalysis.properties
+#include valueAnalysis.properties
 
 # ************** SV-COMP'15 specifics ***********************
 
-#include sv-comp15--predicateAnalysis-bit-precise-cex-check.properties
+#include components/sv-comp15--predicateAnalysis-bit-precise-cex-check.properties
 
 specification =
 
