Disable agressive caching
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/DelegatingBAMRefinerLDV@17868 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/ldv-bam.properties
+++ b/config/ldv-bam.properties
@@ -17,6 +17,8 @@ cpa.predicate.blk.alwaysAtLoops     = true
 
 cegar.refiner                       = cpa.value.refiner.ValueAnalysisDelegatingBAMRefiner
 
+cpa.bam.aggressiveCaching = false
+
 CompositeCPA.cpas       = cpa.location.LocationCPA,cpa.callstack.CallstackCPA,cpa.functionpointer.FunctionPointerCPA,cpa.value.ValueAnalysisCPA, cpa.predicate.BAMPredicateCPA,cpa.conditions.path.PathConditionsCPA
 
 # this automaton defines which locations are the error locations
