--- a/config/ldv-bam.properties
+++ b/config/ldv-bam.properties
@@ -22,7 +22,7 @@ cpa.bam.aggressiveCaching = false
 CompositeCPA.cpas       = cpa.location.LocationCPA,cpa.callstack.CallstackCPA,cpa.functionpointer.FunctionPointerCPA,cpa.value.ValueAnalysisCPA, cpa.predicate.BAMPredicateCPA,cpa.conditions.path.PathConditionsCPA
 
 # this automaton defines which locations are the error locations
-specification = specification/sv-comp.spc
+specification = specification/sv-comp-errorlabel.spc
 
 # drop variables from abstract state once they have more then 22 distinct assignments along the current path
 cpa.conditions.path.condition                 = AssignmentsInPathCondition
