BAM: adding option for a improved precision-update during refinement.
The new option is for testing/debugging only.
It (theoretically) increments the runtime by using more sub-reached-sets than necessary.
However, the option helps to avoid repeated counterexamples for some testcases in BAM.

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@17926 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/predicateAnalysis-bam-rec-plain.properties
+++ b/config/predicateAnalysis-bam-rec-plain.properties
@@ -17,7 +17,9 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.pr
 
 # with refinement, we can _not_ use aggressive caching,
 # because the precision is very important here.
+# we also refine all precision along the error-path.
 cpa.bam.aggressiveCaching=false
+cpa.bam.doPrecisionRefinementForAllStates=true
 
 # enable support for recursion
 cpa.bam.handleRecursiveProcedures=true
