Fix errorpath-export options: cpa.arg.errorPath.export works again, cpa.arg.errorPath.enabled is removed.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@17935 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/includes/predicateAnalysisBackward.properties
+++ b/config/includes/predicateAnalysisBackward.properties
@@ -3,7 +3,7 @@
 cpa.composite.inPredicatedAnalysis=true
 
 analysis.checkCounterexamples = false
-cpa.arg.errorPath.enabled = false
+cpa.arg.errorPath.export = false
 
 cpa.predicate.direction = BACKWARD
 analysis.initialStatesFor = TARGET, EXIT 
