Added some configurations for witness checking.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@17944 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/witness-check.properties
+++ b/config/witness-check.properties
@@ -1,43 +1,39 @@
-#include sv-comp15.properties
+# The specification to check in SV-COMP'16
+specification = specification/sv-comp-reachability.spc
 
-analysis.traversal.order               = bfs
-analysis.traversal.useReversePostorder = false
-analysis.traversal.useCallstack        = false
+# The file to which the counterexample is written
+cpa.arg.errorPath.file = ErrorPath.txt
 
-# When checking witnesses, the witness automaton must agree with the
-# specification automata on target states.
-cpa.automaton.treatErrorsAsTargets     = false
-WitnessAutomaton.cpa.automaton.treatErrorsAsTargets  = true
+# The file to which the refined witness is written
+cpa.arg.errorPath.graphml = witness.graphml
 
-# CPAchecker is able to detect variables only
-# used in a boolean context and treat !0 as 1,
-# but other tools might just as well use 5.
-cpa.value.optimizeBooleanVariables     = false
+# Disable all output except the error path.
+output.disable = true
 
-# When checking witnesses, the target state is marked as target during strengthening.
-# In order to ensure that the predicate state for this state is an abstraction state,
-# this special handling needs to be enabled:  
-cpa.composite.inCPAEnabledAnalysis     = true
+# Disable statistics for memory consumption.
+statistics.memory = false
 
-# Keep as much of the source code as possible:
-# Other tools may use that code in their witnesses
-cfa.simplifyCfa                        = false
+# No multi edges during witness checking
+cfa.useMultiEdges = false
 
-# Multi-edge optimization is not required for witness checking,
-# because it should be fast anyway; also, it might cause problems
-cfa.useMultiEdges                      = false
+# Use sequential combination of analyses.
+analysis.restartAfterUnknown = true
 
-# For witness checking, then/else branches must be mapped correctly
-cfa.allowBranchSwapping                = false
+# The analyses used for (non-recursive) reachability properties.
+restartAlgorithm.configFiles = components/sv-comp16--witness-check.properties, components/sv-comp16--recursion.properties::if-recursive
 
-parser.transformTokensToLines          = false
+# Tell all analyses to skip (non-explicit) recursion
+analysis.summaryEdges = true
+cpa.callstack.skipVoidRecursion = true
+cpa.callstack.skipFunctionPointerRecursion = true
 
-spec.matchOriginLine                   = true
-spec.matchOffset                       = true
-spec.matchAssumeCase                   = true
-spec.matchSourcecodeData               = false
-spec.strictMatching                    = false
+# enable float handling in predicate analysis
+cpa.predicate.encodeFloatAs = FLOAT
 
-output.disable = false
+cpa.predicate.encodeBitvectorAs = RATIONAL
+
+solver.solver = MathSAT5
+
+#include includes/witness-check.properties
 
 memorysafety.config = witness-check--memorysafety.properties
