--- a/config/witness-check--memorysafety.properties
+++ b/config/witness-check--memorysafety.properties
@@ -17,6 +17,7 @@ analysis.checkCounterexamples = false
 cpa.smg.enableMallocFail       = false
 cpa.smg.handleUnknownFunctions = assume_safe
 cpa.smg.guessSizeOfUnknownMemorySize = false
+cpa.smg.runtimeCheck = NONE
 
 output.disable = false
 
