updating config for category of recursive sourcefiles.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@17981 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/components/sv-comp16--recursion.properties
+++ b/config/components/sv-comp16--recursion.properties
@@ -8,25 +8,33 @@ analysis.traversal.useReversePostorder = true
 analysis.traversal.useCallstack = true
 
 analysis.algorithm.CEGAR = true
-
 cegar.refiner = cpa.predicate.BAMPredicateRefiner
 
-# ARGCPA is necessary for refinement and has to be the top-level CPA in the BAM-CPA
 cpa = cpa.bam.BAMCPA
 BAMCPA.cpa = cpa.arg.ARGCPA
 ARGCPA.cpa = cpa.composite.CompositeCPA
-
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.predicate.BAMPredicateCPA
 
+# with refinement, we can _not_ use aggressive caching,
+# because the precision is very important here.
+# we also refine all precision along the error-path.
 cpa.bam.aggressiveCaching=false
+cpa.bam.doPrecisionRefinementForAllStates=true
+
+# enable support for recursion
 cpa.bam.handleRecursiveProcedures=true
 cpa.callstack.depth=1
 
-# parameter variables and nested interpolants for recursive procedures
-cpa.predicate.refinement.strategy = TREE_NESTED
+solver.solver=SMTINTERPOL
+
+# strategy is very important for recursion!
+cpa.predicate.refinement.strategy = tree
+
+# use additional symbols, needed for tree-interpolation (for some solvers)
 cpa.predicate.useParameterVariables = true
 cpa.predicate.useParameterVariablesForGlobals = true
 
+# set abstraction locations according to BAM
 cpa.predicate.blk.alwaysAtFunctions = true
 cpa.predicate.blk.alwaysAtLoops     = true
 cpa.predicate.blk.alwaysAtFunctionCallNodes = true
@@ -34,4 +42,8 @@ cpa.predicate.blk.alwaysAtFunctionCallNodes = true
 cpa.predicate.bam.auxiliaryPredicateComputer = false
 
 cpa.predicate.handlePointerAliasing = false
+
+# Currently there are no bitvectors or floats in the test-set for recursion.
+# Thus we use INTEGER as default. Floats/Rationals are not used.
 cpa.predicate.encodeBitvectorAs = INTEGER
+cpa.predicate.encodeFloatAs = RATIONAL
