--- a/lib/ivy.xml
+++ b/lib/ivy.xml
@@ -84,7 +84,10 @@
         </dependency>
 
         <!-- Princess -->
-        <dependency org="org.ruemmer.philipp" name="princess" rev="2015-07-03-r2432" conf="runtime->default"/>
+        <dependency org="org.ruemmer.philipp" name="princess" rev="2015-10-14-r2529" conf="runtime->runtime; contrib->sources">
+          <artifact name="princess" e:classifier="assertionless" conf="runtime"/>
+          <artifact name="princess" e:classifier="sources-assertionless" conf="contrib" ext="zip"/>
+        </dependency>
 
         <!-- Google error-prone
              Compiler adaptor with some useful checks for common errors. -->
