Make configurations for witness checking consistent: enable output files in all of them such that we can generate reports from the output files.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18033 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/includes/witness-check.properties
+++ b/config/includes/witness-check.properties
@@ -12,3 +12,9 @@ cfa.allowBranchSwapping=false
 
 # Always explore towards the closest violating automaton states first
 analysis.traversal.byAutomatonVariable=__DISTANCE_TO_VIOLATION
+
+# Disable statistics for memory consumption.
+statistics.memory = false
+
+# The file to which the refined witness is written
+cpa.arg.errorPath.graphml = witness.graphml
