Increase time limit for the k-induction component of the sv-comp15 configuration.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18055 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/components/sv-comp16--03-bmc-k-induction.properties
+++ b/config/components/sv-comp16--03-bmc-k-induction.properties
@@ -11,4 +11,8 @@
 
 specification =
 
-limits.time.cpu = 60s
+limits.time.cpu = 300s
+
+bmc.addInvariantsByInduction    = false
+solver.solver                   = MATHSAT5
+cpa.predicate.encodeBitvectorAs = BITVECTOR
