Change default for option whether malloc may return null. Previously malloc was assumed to always succeed by all predicate-analysis configurations, contradicting the C standard. Now the predicate analysis assumes malloc may return null. For all -sv-comp* configurations the option is still set, because the SV-Comp rules specify that malloc never returns null.
WARNING: This means that when benchmarking a predicate-analysis-based
configuration against SV-Comp files, you know must set this option manually,
like we do in the benchmark definitions in test/test-sets/.

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18064 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/components/sv-comp13--combinations-predicate.properties
+++ b/config/components/sv-comp13--combinations-predicate.properties
@@ -40,3 +40,7 @@ cpa.predicate.encodeBitvectorAs = RATIONAL
 
 # Write counterexample to file (required by competition).
 cpa.arg.errorPath.file = ErrorPath.txt
+
+# malloc never returns null according to SV-Comp rules
+cpa.predicate.memoryAllocationsAlwaysSucceed = true
+
