--- a/config/sv-comp12-bam-funpoint.properties
+++ b/config/sv-comp12-bam-funpoint.properties
@@ -34,3 +34,6 @@ cpa.arg.errorPath.file = ErrorPath.txt
 cpa.predicate.handlePointerAliasing = true
 solver.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = RATIONAL
+
+# malloc never returns null according to SV-Comp rules
+cpa.predicate.memoryAllocationsAlwaysSucceed = true
