--- a/config/sv-comp15.properties
+++ b/config/sv-comp15.properties
@@ -51,3 +51,6 @@ cpa.predicate.encodeFloatAs = FLOAT
 cpa.predicate.encodeBitvectorAs = RATIONAL
 
 solver.solver = MathSAT5
+
+# malloc never returns null according to SV-Comp rules
+cpa.predicate.memoryAllocationsAlwaysSucceed = true
