--- a/config/sv-comp12-bam.properties
+++ b/config/sv-comp12-bam.properties
@@ -36,3 +36,6 @@ cpa.predicate.handlePointerAliasing = false
 
 solver.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = RATIONAL
+
+# malloc never returns null according to SV-Comp rules
+cpa.predicate.memoryAllocationsAlwaysSucceed = true
