--- a/config/sv-comp12.properties
+++ b/config/sv-comp12.properties
@@ -37,3 +37,6 @@ cpa.predicate.encodeBitvectorAs = RATIONAL
 # Disable all output files except the error path
 output.disable=true
 cpa.arg.errorPath.file = ErrorPath.txt
+
+# malloc never returns null according to SV-Comp rules
+cpa.predicate.memoryAllocationsAlwaysSucceed = true
