--- a/config/sv-comp13--valueItp-pred.properties
+++ b/config/sv-comp13--valueItp-pred.properties
@@ -29,3 +29,6 @@ cpa.predicate.encodeBitvectorAs = RATIONAL
 output.disable         = true
 statistics.memory      = false
 cpa.arg.errorPath.file = ErrorPath.txt
+
+# malloc never returns null according to SV-Comp rules
+cpa.predicate.memoryAllocationsAlwaysSucceed = true
