--- a/config/sv-comp14-challenge.properties
+++ b/config/sv-comp14-challenge.properties
@@ -30,3 +30,6 @@ cpa.callstack.skipRecursion = true
 
 solver.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = RATIONAL
+
+# malloc never returns null according to SV-Comp rules
+cpa.predicate.memoryAllocationsAlwaysSucceed = true
