--- a/config/sv-comp14.properties
+++ b/config/sv-comp14.properties
@@ -35,3 +35,6 @@ memorysafety.config = sv-comp14--memorysafety.properties
 
 solver.solver = MathSAT5
 cpa.predicate.encodeBitvectorAs = RATIONAL
+
+# malloc never returns null according to SV-Comp rules
+cpa.predicate.memoryAllocationsAlwaysSucceed = true
