--- a/config/ldv.properties
+++ b/config/ldv.properties
@@ -55,7 +55,8 @@ cpa.predicate.defaultArrayLength = 1
 cpa.predicate.maxArrayLength = 1
 
 
-# Setting the option to make memory allocations always return correct addresses
+# Setting the option to make memory allocations behave according the C standard:
+# return 0 in case of failure
 cpa.predicate.memoryAllocationsAlwaysSucceed = false
 
 # Avoid typically huge amount of messages about dead code
