Added a missing config and fixed a config that references it.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/checkerInclTiger@18086 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/variabilityAware.properties
+++ b/config/variabilityAware.properties
@@ -50,7 +50,7 @@ tiger.limitsPerGoal.time.cpu.increment = 10
 tiger.allCoveredGoalsPerTestCase = false
 tiger.printLabels = false
 
-tiger.algorithmConfigurationFile = ../tiger-internal-algorithm---pred-refiner.properties
+tiger.algorithmConfigurationFile = ./tiger-internal-algorithm---pred-refiner.properties
 
 #include ./includes/cex-check-valueAnalysis.properties
 analysis.algorithm.CEGAR = true
