--- a/config/mpa-alg-predicate-abelf.properties
+++ b/config/mpa-alg-predicate-abelf.properties
@@ -11,13 +11,13 @@ cpa.automaton.prec.targetDisabledAfterRefinements=0
 coverage.stdout.enabled=false
 coverage.mode=REACHED
 
-# MultiEdges are not supported by the current implementation                    
-#   of the ControlAutomataCPA (bug/broken implementation)                       
-cfa.useMultiEdges=false 
-
 analysis.stopAfterError=false
 analysis.checkCounterexamples=false
-analysis.checkMultipleProperties=false
+analysis.checkMultipleProperties=true
+
+# MultiEdges are not supported by the current implementation
+#   of the ControlAutomataCPA (bug/broken implementation)
+cfa.useMultiEdges=false
 
 cpa.automaton.prec.localPrecisionUpdate=true
 
@@ -25,7 +25,11 @@ cpa.automaton.breakOnTargetState=1
 cpa.automaton.merge.onTop=false
 cpa.automaton.merge.onInactive=true
 cpa.automaton.prec.targetHandledAfterViolations=1
+
+# Automata with a 'split' perform a transition 
+#   to 'inactive' themselves (in combination with a SAT check)
 cpa.automaton.prec.onHandledTarget=BOTTOM
+
 cpa.automaton.stopAfterOneFeasiblePathPerProperty=false
 
 cpa.predicate.solver=MATHSAT5
