Updated the config
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/muauto@18135 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/mpa-alg-predicate-abelf.properties
+++ b/config/mpa-alg-predicate-abelf.properties
@@ -5,7 +5,6 @@ cpa.predicate.predmap.export=true
 predicate.predmap.file=precision.prec
 cpa.predicate.refinement.predicateBasisStrategy=ALL
 cpa.predicate.precision.sharing=GLOBAL
-cpa.automaton.prec.targetDisabledAfterRefinements=0
 
 # We do not use the old coverage mechanism. We use CoverageCPA! 
 coverage.stdout.enabled=false
@@ -24,7 +23,14 @@ cpa.automaton.prec.localPrecisionUpdate=true
 cpa.automaton.breakOnTargetState=1
 cpa.automaton.merge.onTop=false
 cpa.automaton.merge.onInactive=true
+
+# Do not disable properties within the precision adjustment
+#   based on the number of violations! 
+#   This is done by the MPA algorithm itself.
 cpa.automaton.prec.targetHandledAfterViolations=1
+
+# No bound on the number of refinements per property!
+cpa.automaton.prec.targetDisabledAfterRefinements=0
 
 # Automata with a 'split' perform a transition 
 #   to 'inactive' themselves (in combination with a SAT check)
