Increased the cpu time limit for the initial value analysis component of the sv-comp16 config from 60s to 90s. For large tasks such as ECA, the additional time is well spent here and was previously basically wasted at the end of the sequence. With the additional time, it will even be possible to use some pointer aliasing information.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18145 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/components/sv-comp16--01-valueAnalysis.properties
+++ b/config/components/sv-comp16--01-valueAnalysis.properties
@@ -13,4 +13,6 @@
 
 specification =
 
-limits.time.cpu = 60s
+limits.time.cpu = 90s
+
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.pointer2.PointerCPA
