Updated LPI config for refinement.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18153 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy-refinement.properties
+++ b/config/policy-refinement.properties
@@ -8,6 +8,8 @@ globalRefinement=true
 
 [cpa.stator.policy]
 generateOctagons=false
+generateTemplatesUsingConvexHull=true
+usePreviousBounds=false
 
 [cfa]
 findLiveVariables = true
