LPI-refinement: updating the configuration.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18154 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy-refinement.properties
+++ b/config/policy-refinement.properties
@@ -10,6 +10,10 @@ globalRefinement=true
 generateOctagons=false
 generateTemplatesUsingConvexHull=true
 usePreviousBounds=false
+unrollingRefinementThreshold=10
 
 [cfa]
 findLiveVariables = true
+
+[cpa.loopstack]
+loopIterationsBeforeAbstraction=2
