Change type of refinement selection for the second value analysis component of the sv-comp16 config to DOMAIN_GOOD_WIDTH_NARROW_SHORT
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18155 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/components/sv-comp16--02-valueAnalysis-itp.properties
+++ b/config/components/sv-comp16--02-valueAnalysis-itp.properties
@@ -16,3 +16,7 @@
 specification =
 
 limits.time.cpu = 60s
+
+# refinement selection options
+precision.sharing=scope
+cpa.value.refinement.prefixPreference=DOMAIN_GOOD_WIDTH_NARROW_SHORT
