New integration configuration for LPI.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18166 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy-refinement.properties
+++ b/config/policy-refinement.properties
@@ -11,6 +11,7 @@ generateOctagons=false
 generateTemplatesUsingConvexHull=true
 usePreviousBounds=false
 unrollingRefinementThreshold=10
+unguidedTemplateRefinement=true
 
 [cfa]
 findLiveVariables = true
