--- a/config/components/sv-comp16--recursion.properties
+++ b/config/components/sv-comp16--recursion.properties
@@ -4,3 +4,13 @@
 # ----------------------------------------------------------------------
 
 #include ../valuePredicateAnalysis-bam-rec.properties
+
+
+# strategy is very important for recursion!
+# we use Mathsat as solver, because it is used
+# in the rest of the sv-comp16-configurations.
+# Mathsat has no direct tree-itp-support, 
+# but we can simulate it through nested interpolation.
+
+solver.solver=MATHSAT5
+cpa.predicate.refinement.strategy = tree_nested
