--- a/config/policy-k-induction.properties
+++ b/config/policy-k-induction.properties
@@ -1,38 +1,40 @@
 #include bmc.properties
 
+# NOTE: PredicateCPA is used with no abstractions, hence it effectively performs
+# symbolic execution.
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.predicate.PredicateCPA, cpa.assumptions.storage.AssumptionStorageCPA, cpa.bounds.BoundsCPA, cpa.edgeexclusion.EdgeExclusionCPA, cpa.programcounter.ProgramCounterCPA, cpa.value.ValueAnalysisCPA
 
-# enable induction for safety verification
-bmc.induction = true
+[cpa.bounds]
+maxLoopIterationsUpperBound = 0
+maxLoopIterations = 1
+maxLoopIterationAdjusterFactory = INCREMENT
 
-# provide additional automatically generated invariants to the induction proof
-bmc.addInvariantsByAI = true
-bmc.addInvariantsByInduction = false
+[bmc]
+induction = true
+addInvariantsByAI = true
+addInvariantsByInduction = false
 
-# config file for invariant generation for induction
-invariantGeneration.config = policy-refinement.properties
+[invariantGeneration]
+config = policy-invariants.properties
+async = true
+adjustConditions = true
 
-# generate invariants in parallel to the BMC analysis
-invariantGeneration.async = false
+[solver]
+solver = SMTInterpol
 
-# improve generated invariants over time
-invariantGeneration.adjustConditions = true
+[cpa.predicate]
+encodeFloatAs = RATIONAL
 
-# activate iterative deepening (0 is infinite deepening)
-cpa.bounds.maxLoopIterationsUpperBound = 0
+[cpa.callstack]
+depth=1
 
-# start iterative deepening with an initial bound of 1
-cpa.bounds.maxLoopIterations = 1
+[cfa]
+findLiveVariables = true
+transformIntoSingleLoop = false
 
-# increment the bound by one in every iteration of deepening
-cpa.bounds.maxLoopIterationAdjusterFactory = INCREMENT
+[analysis]
+checkCounterexamples = true
 
-solver.solver = SMTInterpol
-cpa.predicate.encodeFloatAs = RATIONAL
-
-cpa.callstack.depth=1
-cfa.findLiveVariables = true
-
-analysis.checkCounterexamples = true
-counterexample.checker = CPACHECKER
-counterexample.checker.config = cex-checks/predicateAnalysis-as-bitprecise-cex-check.properties
+[counterexample]
+checker = CPACHECKER
+checker.config = cex-checks/predicateAnalysis-as-bitprecise-cex-check.properties
