LPI: experimenting w/ k-induction config.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18170 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy-invariants.properties
+++ b/config/policy-invariants.properties
@@ -1,4 +1,7 @@
 #include policy-refinement.properties
 
+[cpa.stator.policy]
+cpa.stator.policy.unguidedTemplateRefinement = false
+
 [cpa.loopstack]
 loopIterationsBeforeAbstraction=1
