--- a/config/policy-k-induction.properties
+++ b/config/policy-k-induction.properties
@@ -15,7 +15,7 @@ addInvariantsByAI = true
 addInvariantsByInduction = false
 
 [invariantGeneration]
-config = policy-invariants.properties
+config = policy.properties
 async = true
 adjustConditions = true
 
