LPI: removed loopstack from invariant generation, as it denies precision
adjustment.

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18173 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy-invariants.properties
+++ b/config/policy-invariants.properties
@@ -1,5 +1,7 @@
 #include policy-refinement.properties
 
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.policyiteration.PolicyCPA
+
 [cpa.stator.policy]
 cpa.stator.policy.unguidedTemplateRefinement = true
 generateTemplatesUsingConvexHull = false
