Update to LPI + k-induction configuration, experiment with generating
templates using convex hull.

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18174 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy-invariants.properties
+++ b/config/policy-invariants.properties
@@ -4,7 +4,7 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.fu
 
 [cpa.stator.policy]
 cpa.stator.policy.unguidedTemplateRefinement = true
-generateTemplatesUsingConvexHull = false
+generateTemplatesUsingConvexHull = true
 
 [cpa.loopstack]
 loopIterationsBeforeAbstraction=1
