Changed counterexample checker for both k-induction and predicate analysis to CBMC for the sv-comp16 config
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18179 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/components/sv-comp16--04-predicateAnalysis-bitprecise.properties
+++ b/config/components/sv-comp16--04-predicateAnalysis-bitprecise.properties
@@ -6,5 +6,6 @@
 
 # use counterexample check with CBMC instead of the normal cex-check config that is identical to the current configuration
 analysis.checkCounterexamples = true
+counterexample.checker = CBMC
 
 specification =
