--- a/config/components/sv-comp16--03-bmc-k-induction.properties
+++ b/config/components/sv-comp16--03-bmc-k-induction.properties
@@ -7,9 +7,11 @@
 
 # ************** SV-COMP'16 specifics ***********************
 
-#include sv-comp16--predicateAnalysis-bit-precise-cex-check.properties
-
 specification =
+
+# use counterexample check with CBMC instead of the normal cex-check config (which has a lower precision than k-induction, which is value analysis + bit-precise predicate analysis)
+analysis.checkCounterexamples = true
+counterexample.checker = CBMC
 
 limits.time.cpu = 300s
 
