--- a/config/intervalAnalysis-bam-rec.properties
+++ b/config/intervalAnalysis-bam-rec.properties
@@ -1,12 +1,11 @@
 # ----------------------------------------------------------------------
 # This configuration file uses a combination of block abstraction memoisation
-# and value-analysis to verify recursive procedures.
+# and interval-analysis to verify recursive procedures.
 # ----------------------------------------------------------------------
 
 #include includes/bam-rec.properties
 
 # use refinment and define the refiner to use
-analysis.algorithm.CEGAR = true
-cegar.refiner = cpa.value.refiner.ValueAnalysisBAMRefiner
+analysis.algorithm.CEGAR = false
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.value.ValueAnalysisCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.interval.IntervalAnalysisCPA
