Missing MPA config
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/muauto@18188 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/mpa-alg-predicate-abelf.properties
+++ b/config/mpa-alg-predicate-abelf.properties
@@ -10,7 +10,11 @@ cpa.predicate.precision.sharing=GLOBAL
 coverage.stdout.enabled=false
 coverage.mode=REACHED
 
-analysis.stopAfterError=false
+# The outer analysis loop should terminate
+#   also if there are states remaining in the set reached
+#   (this might be the case if no new partitioning was found)
+analysis.stopAfterError=true
+
 analysis.checkCounterexamples=false
 analysis.checkMultipleProperties=true
 
