--- a/config/includes/witness-check.properties
+++ b/config/includes/witness-check.properties
@@ -18,3 +18,7 @@ statistics.memory = false
 
 # The file to which the refined witness is written
 cpa.arg.errorPath.graphml = witness.graphml
+
+# This is already a counterexample/witness check; no further check is required
+# (actually, further checks may add confidence, but this process could be repeated ad infinitum)
+analysis.checkCounterexamples = false
