Add witness checking config for overflows.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18205 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/witness-check.properties
+++ b/config/witness-check.properties
@@ -25,3 +25,5 @@ solver.solver = MathSAT5
 #include includes/witness-check.properties
 
 memorysafety.config = witness-check--memorysafety.properties
+
+overflow.config = witness-check--overflow.properties
