output witnesses for memory safety and overflows
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18206 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/sv-comp16--memorysafety.properties
+++ b/config/sv-comp16--memorysafety.properties
@@ -23,11 +23,17 @@ cpa.smg.guessSizeOfUnknownMemorySize = false
 
 cfa.useMultiEdges = false
 
-# Disable all output files except the error path.
- output.disable = true
+# Disable all output files except the witness.
+output.disable = true
 
-# Write counterexample to file (required by competition).
-cpa.arg.errorPath.file = ErrorPath.txt
+# Write witness to file (required by competition).
+cpa.arg.errorPath.graphml=witness.graphml
+
+# simplified CFA is bad for witnesses
+cfa.simplifyCfa = false
+
+# CFA branch swapping is bad for witnesses
+cfa.allowBranchSwapping = false
 
 # Disable statistics for memory consumption.
 statistics.memory = false
