--- a/config/sv-comp16.properties
+++ b/config/sv-comp16.properties
@@ -19,7 +19,7 @@ cpa.arg.errorPath.file = ErrorPath.txt
 cpa.arg.errorPath.graphml = witness.graphml
 
 # Disable all output except the error path.
-output.disable = false
+output.disable = true
 
 # Disable statistics for memory consumption.
 statistics.memory = false
