--- a/config/sv-comp16--overflow.properties
+++ b/config/sv-comp16--overflow.properties
@@ -22,9 +22,20 @@ specification = specification/overflow.spc
 # checking conterexamples, esp. with CBMC does not make sense
 analysis.checkCounterexamples = false
 
+# multi edges are not required for the overflow tasks
 cfa.useMultiEdges = false
 
+# Disable all output files except the witness.
 output.disable = true
+
+# Write witness to file (required by competition).
+cpa.arg.errorPath.graphml=witness.graphml
+
+# simplified CFA is bad for witnesses
+cfa.simplifyCfa = false
+
+# CFA branch swapping is bad for witnesses
+cfa.allowBranchSwapping = false
 
 # This is the configuration used when verifying the overflow property (actually this configuration).
 overflow.config = sv-comp16--overflow.properties
