sv-comp16 config: Do not export constant values for pointers if an external tool is supposed to check the witness: the concrete value we use might not make sense in a real setting
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18208 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/sv-comp16--memorysafety.properties
+++ b/config/sv-comp16--memorysafety.properties
@@ -35,6 +35,11 @@ cfa.simplifyCfa = false
 # CFA branch swapping is bad for witnesses
 cfa.allowBranchSwapping = false
 
+# Do not export constant values for pointers
+# if an external tool is supposed to check the witness:
+# the concrete value we use might not make sense in a real setting
+counterexample.export.assumptions.includeConstantsForPointers = false
+
 # Disable statistics for memory consumption.
 statistics.memory = false
 
