--- a/config/sv-comp16--overflow.properties
+++ b/config/sv-comp16--overflow.properties
@@ -37,5 +37,10 @@ cfa.simplifyCfa = false
 # CFA branch swapping is bad for witnesses
 cfa.allowBranchSwapping = false
 
+# Do not export constant values for pointers
+# if an external tool is supposed to check the witness:
+# the concrete value we use might not make sense in a real setting
+counterexample.export.assumptions.includeConstantsForPointers = false
+
 # This is the configuration used when verifying the overflow property (actually this configuration).
 overflow.config = sv-comp16--overflow.properties
