--- a/config/components/sv-comp16--witness-check.properties
+++ b/config/components/sv-comp16--witness-check.properties
@@ -6,4 +6,6 @@ specification =
 
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.predicate.PredicateCPA, cpa.value.ValueAnalysisCPA
 
+cpa.predicate.refinement.performInitialStaticRefinement = false
+
 cpa.value.merge = JOIN 
