refinement selection with value analysis works better wenn restarting from root
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18212 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/components/sv-comp16--02-valueAnalysis-itp.properties
+++ b/config/components/sv-comp16--02-valueAnalysis-itp.properties
@@ -18,5 +18,6 @@ specification =
 limits.time.cpu = 60s
 
 # refinement selection options
+cpa.value.refinement.restart=ROOT
 precision.sharing=scope
 cpa.value.refinement.prefixPreference=DOMAIN_GOOD_WIDTH_NARROW_SHORT
