--- a/config/sv-comp16--memorysafety.properties
+++ b/config/sv-comp16--memorysafety.properties
@@ -8,7 +8,7 @@
 # specification to find memory related problems
 specification = specification/cpalien-leaks.spc, specification/TerminatingFunctions.spc
 
-CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.value.ValueAnalysisCPA, cpa.functionpointer.FunctionPointerCPA, cpa.smg.SMGCPA
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.smg.SMGCPA
 
 # checking conterexamples, esp. with CBMC does not make sense
 analysis.checkCounterexamples = false
