SMGCPA: Don't forget to add prefixes to option names
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18215 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/sv-comp16--memorysafety.properties
+++ b/config/sv-comp16--memorysafety.properties
@@ -45,3 +45,15 @@ statistics.memory = false
 
 # This is the configuration used when verifying memory safety properties (actually this configuration).
 memorysafety.config = sv-comp16--memorysafety.properties
+
+# Memory allocation functions
+cpa.smg.memoryAllocationFunctions = malloc,__kmalloc,kmalloc,kzalloc,kzalloc_node,ldv_zalloc,ldv_malloc
+
+# Array allocation functions
+cpa.smg.arrayAllocationFunctions = calloc,kmalloc_array,kcalloc
+
+# Allocation functions which set memory to zero
+cpa.smg.zeroingMemoryAllocation = calloc,kzalloc,kcalloc,kzalloc_node,ldv_zalloc
+
+# Deallocation functions
+cpa.smg.deallocationFunctions = free,kfree,kfree_const
