Turn off multi edges in sv-comp16 config
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18251 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/sv-comp16.properties
+++ b/config/sv-comp16.properties
@@ -24,8 +24,9 @@ output.disable = true
 # Disable statistics for memory consumption.
 statistics.memory = false
 
-# Use multi-edges for efficiency reasons.
-cfa.useMultiEdges = true
+# Multi edges are not important for our efficiency,
+# but prevent precise witnesses and concurrency analysis
+cfa.useMultiEdges = false
 
 # Simplified CFA is bad for witnesses
 cfa.simplifyCfa = false
