Explicitly enable float theory in sv-comp16 components; k-induction had RATIONAL
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18254 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/components/sv-comp16--03-bmc-k-induction.properties
+++ b/config/components/sv-comp16--03-bmc-k-induction.properties
@@ -17,4 +17,5 @@ limits.time.cpu = 300s
 
 bmc.addInvariantsByInduction    = false
 solver.solver                   = MATHSAT5
+cpa.predicate.encodeFloatAs     = FLOAT
 cpa.predicate.encodeBitvectorAs = BITVECTOR
