--- a/config/components/sv-comp16--04-predicateAnalysis-bitprecise.properties
+++ b/config/components/sv-comp16--04-predicateAnalysis-bitprecise.properties
@@ -9,3 +9,6 @@ analysis.checkCounterexamples = true
 counterexample.checker = CBMC
 
 specification =
+
+cpa.predicate.encodeFloatAs     = FLOAT
+cpa.predicate.encodeBitvectorAs = BITVECTOR
