Explicitly enable bitevectors in sv-comp16 main config; we use it in all components anyway
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18255 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/sv-comp16.properties
+++ b/config/sv-comp16.properties
@@ -61,7 +61,7 @@ cpa.callstack.skipFunctionPointerRecursion = true
 # enable float handling in predicate analysis
 cpa.predicate.encodeFloatAs = FLOAT
 
-cpa.predicate.encodeBitvectorAs = RATIONAL
+cpa.predicate.encodeBitvectorAs = BITVECTOR
 
 solver.solver = MathSAT5
 
