Added the concurrency analysis created by Karlheinz to the sv-comp16 configuration
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@18256 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/sv-comp16.properties
+++ b/config/sv-comp16.properties
@@ -43,7 +43,7 @@ counterexample.export.assumptions.includeConstantsForPointers = false
 analysis.restartAfterUnknown = true
 
 # The analyses used for (non-recursive) reachability properties.
-restartAlgorithm.configFiles = components/sv-comp16--01-valueAnalysis.properties, components/sv-comp16--02-valueAnalysis-itp.properties, components/sv-comp16--03-bmc-k-induction.properties, components/sv-comp16--04-predicateAnalysis-bitprecise.properties, components/sv-comp16--recursion.properties::if-recursive
+restartAlgorithm.configFiles = components/sv-comp16--01-valueAnalysis.properties, components/sv-comp16--02-valueAnalysis-itp.properties, components/sv-comp16--03-bmc-k-induction.properties, components/sv-comp16--04-predicateAnalysis-bitprecise.properties, components/sv-comp16--recursion.properties::if-recursive, components/sv-comp16--concurrency.properties::if-concurrent
 
 # The analyses used for memory safety properties;
 # everything in this file is then ignored.
