--- a/config/witness-validation.properties
+++ b/config/witness-validation.properties
@@ -20,6 +20,9 @@ cpa.predicate.encodeFloatAs = FLOAT
 
 cpa.predicate.encodeBitvectorAs = RATIONAL
 
+# do not ignore any variables; otherwise assumptions over these variables mess up strengthening
+cpa.predicate.ignoreIrrelevantVariables = false
+
 solver.solver = MathSAT5
 
 #include includes/witness-check.properties
