--- a/config/refsel--sv-comp16.properties
+++ b/config/refsel--sv-comp16.properties
@@ -8,8 +8,20 @@
 
 #include valueAnalysis.properties
 
+# process
+output.disable = true
+statistics.memory = false
+
 # specification
 specification = specification/sv-comp-reachability.spc
+
+# witness-support and witness-optimization
+cpa.arg.errorPath.file                                        = ErrorPath.txt
+cpa.arg.errorPath.graphml                                     = witness.graphml
+cfa.useMultiEdges                                             = false
+cfa.simplifyCfa                                               = false
+cfa.allowBranchSwapping                                       = false
+counterexample.export.assumptions.includeConstantsForPointers = false
 
 # analyses
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.predicate.PredicateCPA
@@ -30,7 +42,6 @@ cpa.predicate.blk.alwaysAtLoops                         = true
 cpa.predicate.refinement.performInitialStaticRefinement = true
 cpa.predicate.refinement.prefixPreference               = DOMAIN_GOOD_LONG
 cpa.predicate.refinement.restartAfterRefinements        = 1
-# irrelevant if pointer aliasing is disabled (as for DD64)
 cpa.predicate.memoryAllocationsAlwaysSucceed            = true
 cpa.predicate.precision.sharing                         = SCOPE
 
@@ -44,12 +55,7 @@ counterexample.checker.config = cex-checks/predicateAnalysis-as-bitprecise-cex-c
 
 # decide on recursion ..?
 # -> some recursion (cpa.callstack.skipVoidRecursion=true, cpa.callstack.skipFunctionPointerRecursion=true) is better than skipping all
-# decide on multi edges ..?
-# -> does not matter, really -> better disable to have better witnesses
-# decide on cpa.predicate.handlePointerAliasing=false for DD64 ..?
-# -> TODO
 # decide on bit-precise PA or not?
 # -> bit-precise scores 380 more, solves 50 less, but also 11 incorrect true, and 6 incorrect falses less
-# decide on float, rational encoding
 # decide on symbolic execution
-# add wittness options ..?
+# decide on counterexample-check when using PA-bitprec
