skip non-explicit recursion; bit-precise PA lives up to its promise
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/refinementSelectionForABE@18270 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/refsel--sv-comp16.properties
+++ b/config/refsel--sv-comp16.properties
@@ -27,8 +27,10 @@ counterexample.export.assumptions.includeConstantsForPointers = false
 CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.predicate.PredicateCPA
 
 # fixed set of option for whole analysis
-analysis.checkCounterexamples = true
-analysis.summaryEdges         = true
+analysis.checkCounterexamples              = true
+analysis.summaryEdges                      = true
+cpa.callstack.skipVoidRecursion            = true
+cpa.callstack.skipFunctionPointerRecursion = true
 
 # options for VA
 cpa.value.refinement.prefixPreference = DOMAIN_GOOD_WIDTH_NARROW_SHORT
@@ -44,6 +46,10 @@ cpa.predicate.refinement.prefixPreference               = DOMAIN_GOOD_LONG
 cpa.predicate.refinement.restartAfterRefinements        = 1
 cpa.predicate.memoryAllocationsAlwaysSucceed            = true
 cpa.predicate.precision.sharing                         = SCOPE
+# make PA bit-precise
+solver.solver                                           = MathSAT5
+cpa.predicate.encodeBitvectorAs                         = BITVECTOR
+cpa.predicate.encodeFloatAs                             = FLOAT
 
 # options for combination
 cegar.refiner                         = cpa.value.refiner.ValueAnalysisDelegatingRefiner
@@ -53,9 +59,5 @@ cegar.maxScoreOfValueDomainRefinement = 2
 # counterexample-check
 counterexample.checker.config = cex-checks/predicateAnalysis-as-bitprecise-cex-check.properties
 
-# decide on recursion ..?
-# -> some recursion (cpa.callstack.skipVoidRecursion=true, cpa.callstack.skipFunctionPointerRecursion=true) is better than skipping all
-# decide on bit-precise PA or not?
-# -> bit-precise scores 380 more, solves 50 less, but also 11 incorrect true, and 6 incorrect falses less
 # decide on symbolic execution
 # decide on counterexample-check when using PA-bitprec
