started to implement multi-goal test-generation in one run.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/checkerInclTiger@18272 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/programs/tiger/with_presenceConditions/config/test_generation_single_variants.properties
+++ b/test/programs/tiger/with_presenceConditions/config/test_generation_single_variants.properties
@@ -63,9 +63,10 @@ limits.time.cpu = 3600s
 # reuse options
 tiger.reusePredicates = false
 tiger.reuseARG = false
-# tiger.checkCoverage = true
 
-tiger.allCoveredGoalsPerTestCase = true
+tiger.checkCoverage = false
+tiger.numberOfTestGoalsPerRun = 1
+tiger.allCoveredGoalsPerTestCase = false
 tiger.printLabels = true
 
 # the file is in the standard config directory
