Experimenting with LPI + k-induction config.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/lpi_svcomp16@18274 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/policy-k-induction.properties
+++ b/config/policy-k-induction.properties
@@ -15,7 +15,7 @@ addInvariantsByAI = true
 addInvariantsByInduction = false
 
 [invariantGeneration]
-config = policy-invariants.properties
+config = policy-intervals.properties
 async = true
 adjustConditions = true
 
