--- a/config/policy-value.properties
+++ b/config/policy-value.properties
@@ -1,7 +1,6 @@
-#include policy-refinement.properties
+#include policy-intervals.properties
 
-# LPI + explicit value analysis.
-CompositeCPA.cpas=cpa.location.LocationCPA cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.loopstack.LoopstackCPA, cpa.value.ValueAnalysisCPA, cpa.policyiteration.PolicyCPA
+CompositeCPA.cpas=cpa.location.LocationCPA cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.policyiteration.PolicyCPA
 
 [precision]
 trackIntAddVariables=false
