Add forgotten option from ldv configuration
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/DelegatingBAMRefinerLDV@18277 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/ldv-bam.properties
+++ b/config/ldv-bam.properties
@@ -45,7 +45,7 @@ cpa.arg.errorPath.export = true
 cpa.arg.errorPath.file = ErrorPath.txt
 
 # Set 64-bit machine model
-# analysis.machineModel = Linux64
+analysis.machineModel = Linux64
 
 # Disable counterexample double-check
 analysis.checkCounterexamples = false
