--- a/config/valueAnalysis-concurrency.properties
+++ b/config/valueAnalysis-concurrency.properties
@@ -14,3 +14,4 @@ analysis.traversal.useReversePostorder = true
 analysis.traversal.useCallstack        = true
 
 cpa.callstack.unsupportedFunctions={}
+cfa.useCFACloning=true
